--- a/index.html
+++ b/index.html
@@ -1,17 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Tab</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        /* General Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to bottom, #f8f9fa, #ececec);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+        #background {
+            text-align: center;
+            width: 100%;
+            max-width: 1200px;
+        }
+        #search-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 20px 0;
+        }
+        #search-bar {
+            width: 60%;
+            height: 40px;
+            border: 1px solid #ccc;
+            border-radius: 20px;
+            padding: 0 10px;
+            font-size: 16px;
+        }
+        #mic-icon {
+            width: 20px;
+            height: 20px;
+            margin-left: 10px;
+            cursor: pointer;
+        }
+        #shortcuts {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 30px;
+        }
+        .shortcut {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            width: 80px;
+            text-align: center;
+            text-decoration: none;
+            color: #333;
+            font-size: 14px;
+        }
+        .shortcut img {
+            width: 50px;
+            height: 50px;
+            margin-bottom: 8px;
+            border-radius: 10px;
+        }
+    </style>
 </head>
 <body>
     <div id="background">
-        <input type="text" id="search-bar" placeholder="Search Google">
+        <div id="search-container">
+            <input type="text" id="search-bar" placeholder="Search Google...">
+            <img id="mic-icon" src="https://img.icons8.com/ios-filled/50/000000/microphone.png" alt="Microphone Icon">
+        </div>
         <div id="shortcuts">
-            <a href="#">Shortcut 1</a>
-            <a href="#">Shortcut 2</a>
-            <!-- Add more shortcuts -->
+            <!-- Shortcuts -->
+            <a class="shortcut" href="https://www.youtube.com" target="_blank">
+                <img src="https://img.icons8.com/fluency/96/000000/youtube.png" alt="YouTube">
+                YouTube
+            </a>
+            <a class="shortcut" href="https://discord.com" target="_blank">
+                <img src="https://img.icons8.com/color/96/000000/discord-logo.png" alt="Discord">
+                Discord
+            </a>
+            <a class="shortcut" href="https://github.com" target="_blank">
+                <img src="https://img.icons8.com/ios-filled/50/000000/github.png" alt="GitHub">
+                GitHub
+            </a>
+            <a class="shortcut" href="https://www.google.com" target="_blank">
+                <img src="https://img.icons8.com/color/96/000000/google-logo.png" alt="Google">
+                Google
+            </a>
+            <a class="shortcut" href="https://twitter.com" target="_blank">
+                <img src="https://img.icons8.com/color/96/000000/twitter--v1.png" alt="Twitter">
+                Twitter
+            </a>
+            <a class="shortcut" href="https://www.facebook.com" target="_blank">
+                <img src="https://img.icons8.com/color/96/000000/facebook.png" alt="Facebook">
+                Facebook
+            </a>
+            <a class="shortcut" href="https://www.instagram.com" target="_blank">
+                <img src="https://img.icons8.com/color/96/000000/instagram-new.png" alt="Instagram">
+                Instagram
+            </a>
+            <a class="shortcut" href="https://www.linkedin.com" target="_blank">
+                <img src="https://img.icons8.com/color/96/000000/linkedin-circled--v1.png" alt="LinkedIn">
+                LinkedIn
+            </a>
+            <a class="shortcut" href="https://www.netflix.com" target="_blank">
+                <img src="https://img.icons8.com/color/96/000000/netflix.png" alt="Netflix">
+                Netflix
+            </a>
+            <a class="shortcut" href="https://www.spotify.com" target="_blank">
+                <img src="https://img.icons8.com/color/96/000000/spotify.png" alt="Spotify">
+                Spotify
+            </a>
         </div>
     </div>
+
+    <script>
+        const searchBar = document.getElementById('search-bar');
+        searchBar.addEventListener('keypress', function (e) {
+            if (e.key === 'Enter') {
+                window.open(`https://www.google.com/search?q=${searchBar.value}`);
+            }
+        });
+    </script>
 </body>
 </html>
