--- a/index.html
+++ b/index.html
@@ -13,17 +13,40 @@
         }
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(to bottom, #f8f9fa, #ececec);
+            background: linear-gradient(to bottom, #e3f2fd, #f0f4f8);
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             height: 100vh;
         }
+        #header {
+            display: flex;
+            justify-content: space-between;
+            width: 80%;
+            margin-top: 10px;
+        }
+        #header a {
+            text-decoration: none;
+            color: #333;
+            font-size: 16px;
+            margin: 0 10px;
+        }
+        #header .icons img {
+            width: 24px;
+            height: 24px;
+            margin: 0 5px;
+        }
         #background {
             text-align: center;
             width: 100%;
             max-width: 1200px;
+            animation: fadeIn 1s ease-in-out;
+        }
+        #google-logo {
+            font-size: 32px;
+            font-weight: bold;
+            color: #4285F4;
         }
         #search-container {
             display: flex;
@@ -36,14 +59,24 @@
             height: 40px;
             border: 1px solid #ccc;
             border-radius: 20px;
-            padding: 0 10px;
+            padding-left: 40px;
             font-size: 16px;
         }
-        #mic-icon {
-            width: 20px;
-            height: 20px;
-            margin-left: 10px;
+        #search-container .search-icons {
+            position: relative;
+            width: 60%;
+        }
+        #search-container .search-icons img {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
             cursor: pointer;
+        }
+        #mic-icon {
+            left: 10px;
+        }
+        #camera-icon {
+            right: 10px;
         }
         #shortcuts {
             display: flex;
@@ -68,14 +101,39 @@
             height: 50px;
             margin-bottom: 8px;
             border-radius: 10px;
+            transition: transform 0.3s;
+        }
+        .shortcut img:hover {
+            transform: scale(1.1);
+        }
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
         }
     </style>
 </head>
 <body>
+    <div id="header">
+        <a href="https://mail.google.com" target="_blank">Gmail</a>
+        <a href="https://www.google.com/imghp" target="_blank">Images</a>
+        <div class="icons">
+            <img src="https://img.icons8.com/ios-glyphs/30/000000/circled-user.png" alt="Profile Icon">
+            <img src="https://img.icons8.com/external-those-icons-lineal-color-those-icons/50/000000/external-waffle-miscellaneous-those-icons-lineal-color-those-icons.png" alt="Google Apps Icon">
+        </div>
+    </div>
+
     <div id="background">
+        <div id="google-logo">Google</div>
         <div id="search-container">
-            <input type="text" id="search-bar" placeholder="Search Google...">
-            <img id="mic-icon" src="https://img.icons8.com/ios-filled/50/000000/microphone.png" alt="Microphone Icon">
+            <div class="search-icons">
+                <img id="mic-icon" src="https://img.icons8.com/ios-filled/50/000000/microphone.png" alt="Microphone Icon">
+                <input type="text" id="search-bar" placeholder="Search Google...">
+                <img id="camera-icon" src="https://img.icons8.com/external-dreamstale-lineal-color-dreamstale/32/000000/video-camera.png" alt="Camera Icon">
+            </div>
         </div>
         <div id="shortcuts">
             <!-- Shortcuts -->
