--- a/index.html
+++ b/index.html
@@ -13,180 +13,106 @@
         }
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(to bottom, #e3f2fd, #f0f4f8);
+            background-color: #ffffff;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             height: 100vh;
         }
-        #header {
-            display: flex;
-            justify-content: space-between;
-            width: 80%;
-            margin-top: 10px;
-        }
-        #header a {
-            text-decoration: none;
-            color: #333;
-            font-size: 16px;
-            margin: 0 10px;
-        }
-        #header .icons img {
-            width: 24px;
-            height: 24px;
-            margin: 0 5px;
-        }
-        #background {
-            text-align: center;
-            width: 100%;
-            max-width: 1200px;
-            animation: fadeIn 1s ease-in-out;
-        }
         #google-logo {
-            font-size: 32px;
-            font-weight: bold;
+            font-size: 36px;
             color: #4285F4;
+            font-weight: bold;
+            margin-bottom: 20px;
         }
         #search-container {
+            position: relative;
+            width: 60%;
             display: flex;
             align-items: center;
-            justify-content: center;
-            margin: 20px 0;
+            margin-bottom: 40px;
         }
         #search-bar {
-            width: 60%;
+            width: 100%;
             height: 40px;
             border: 1px solid #ccc;
             border-radius: 20px;
             padding-left: 40px;
             font-size: 16px;
         }
-        #search-container .search-icons {
-            position: relative;
-            width: 60%;
-        }
-        #search-container .search-icons img {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            cursor: pointer;
-        }
         #mic-icon {
-            left: 10px;
-        }
-        #camera-icon {
+            position: absolute;
             right: 10px;
+            cursor: pointer;
+            width: 20px;
+            height: 20px;
         }
         #shortcuts {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            gap: 20px;
-            margin-top: 30px;
+            gap: 15px;
         }
         .shortcut {
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            width: 80px;
-            text-align: center;
             text-decoration: none;
-            color: #333;
             font-size: 14px;
+            color: #333;
         }
         .shortcut img {
-            width: 50px;
-            height: 50px;
-            margin-bottom: 8px;
-            border-radius: 10px;
-            transition: transform 0.3s;
-        }
-        .shortcut img:hover {
-            transform: scale(1.1);
-        }
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
+            width: 60px;
+            height: 60px;
+            margin-bottom: 5px;
         }
     </style>
 </head>
 <body>
-    <div id="header">
-        <a href="https://mail.google.com" target="_blank">Gmail</a>
-        <a href="https://www.google.com/imghp" target="_blank">Images</a>
-        <div class="icons">
-            <img src="https://img.icons8.com/ios-glyphs/30/000000/circled-user.png" alt="Profile Icon">
-            <img src="https://img.icons8.com/external-those-icons-lineal-color-those-icons/50/000000/external-waffle-miscellaneous-those-icons-lineal-color-those-icons.png" alt="Google Apps Icon">
-        </div>
+    <div id="google-logo">Google</div>
+    <div id="search-container">
+        <input type="text" id="search-bar" placeholder="Search Google">
+        <img id="mic-icon" src="https://img.icons8.com/ios-filled/50/000000/microphone.png" alt="Microphone Icon">
     </div>
-
-    <div id="background">
-        <div id="google-logo">Google</div>
-        <div id="search-container">
-            <div class="search-icons">
-                <img id="mic-icon" src="https://img.icons8.com/ios-filled/50/000000/microphone.png" alt="Microphone Icon">
-                <input type="text" id="search-bar" placeholder="Search Google...">
-                <img id="camera-icon" src="https://img.icons8.com/external-dreamstale-lineal-color-dreamstale/32/000000/video-camera.png" alt="Camera Icon">
-            </div>
-        </div>
-        <div id="shortcuts">
-            <!-- Shortcuts -->
-            <a class="shortcut" href="https://www.youtube.com" target="_blank">
-                <img src="https://img.icons8.com/fluency/96/000000/youtube.png" alt="YouTube">
-                YouTube
-            </a>
-            <a class="shortcut" href="https://discord.com" target="_blank">
-                <img src="https://img.icons8.com/color/96/000000/discord-logo.png" alt="Discord">
-                Discord
-            </a>
-            <a class="shortcut" href="https://github.com" target="_blank">
-                <img src="https://img.icons8.com/ios-filled/50/000000/github.png" alt="GitHub">
-                GitHub
-            </a>
-            <a class="shortcut" href="https://www.google.com" target="_blank">
-                <img src="https://img.icons8.com/color/96/000000/google-logo.png" alt="Google">
-                Google
-            </a>
-            <a class="shortcut" href="https://twitter.com" target="_blank">
-                <img src="https://img.icons8.com/color/96/000000/twitter--v1.png" alt="Twitter">
-                Twitter
-            </a>
-            <a class="shortcut" href="https://www.facebook.com" target="_blank">
-                <img src="https://img.icons8.com/color/96/000000/facebook.png" alt="Facebook">
-                Facebook
-            </a>
-            <a class="shortcut" href="https://www.instagram.com" target="_blank">
-                <img src="https://img.icons8.com/color/96/000000/instagram-new.png" alt="Instagram">
-                Instagram
-            </a>
-            <a class="shortcut" href="https://www.linkedin.com" target="_blank">
-                <img src="https://img.icons8.com/color/96/000000/linkedin-circled--v1.png" alt="LinkedIn">
-                LinkedIn
-            </a>
-            <a class="shortcut" href="https://www.netflix.com" target="_blank">
-                <img src="https://img.icons8.com/color/96/000000/netflix.png" alt="Netflix">
-                Netflix
-            </a>
-            <a class="shortcut" href="https://www.spotify.com" target="_blank">
-                <img src="https://img.icons8.com/color/96/000000/spotify.png" alt="Spotify">
-                Spotify
-            </a>
-        </div>
+    <div id="shortcuts">
+        <!-- Shortcut Icons -->
+        <a class="shortcut" href="https://github.com" target="_blank">
+            <img src="https://img.icons8.com/ios-filled/50/000000/github.png" alt="GitHub Icon">
+            GitHub
+        </a>
+        <a class="shortcut" href="https://meet.google.com" target="_blank">
+            <img src="https://img.icons8.com/fluency/96/000000/google-meet.png" alt="Google Meet Icon">
+            Meet
+        </a>
+        <a class="shortcut" href="https://storybook.js.org" target="_blank">
+            <img src="https://img.icons8.com/color/96/000000/storybook.png" alt="Storybook Icon">
+            Storybook
+        </a>
+        <a class="shortcut" href="https://discord.com" target="_blank">
+            <img src="https://img.icons8.com/color/96/000000/discord-logo.png" alt="Discord Icon">
+            Discord
+        </a>
+        <a class="shortcut" href="https://www.google.com" target="_blank">
+            <img src="https://img.icons8.com/color/96/000000/google-logo.png" alt="Google Icon">
+            Google
+        </a>
+        <a class="shortcut" href="https://reactjs.org" target="_blank">
+            <img src="https://img.icons8.com/color/96/000000/react-native.png" alt="React Icon">
+            React
+        </a>
+        <a class="shortcut" href="https://www.netflix.com" target="_blank">
+            <img src="https://img.icons8.com/color/96/000000/netflix.png" alt="Netflix Icon">
+            Netflix
+        </a>
+        <a class="shortcut" href="https://www.spotify.com" target="_blank">
+            <img src="https://img.icons8.com/color/96/000000/spotify.png" alt="Spotify Icon">
+            Spotify
+        </a>
+        <a class="shortcut" href="#" target="_blank">
+            <img src="https://img.icons8.com/color/96/000000/add.png" alt="Add Shortcut Icon">
+            Add Shortcut
+        </a>
     </div>
-
-    <script>
-        const searchBar = document.getElementById('search-bar');
-        searchBar.addEventListener('keypress', function (e) {
-            if (e.key === 'Enter') {
-                window.open(`https://www.google.com/search?q=${searchBar.value}`);
-            }
-        });
-    </script>
 </body>
 </html>
