--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             height: 100vh;
         }
         #google-logo {
-            font-size: 36px;
+            font-size: 60px; /* Increased size for prominence */
             color: #4285F4;
             font-weight: bold;
             margin-bottom: 20px;
