--- a/index.html
+++ b/index.html
@@ -20,8 +20,26 @@
             justify-content: center;
             height: 100vh;
         }
+        #top-right {
+            position: absolute;
+            top: 10px;
+            right: 20px;
+            display: flex;
+            align-items: center;
+        }
+        #top-right a {
+            text-decoration: none;
+            color: #333;
+            font-size: 14px;
+            margin-right: 15px;
+        }
+        #top-right .icon {
+            width: 30px;
+            height: 30px;
+            margin-right: 10px;
+        }
         #google-logo {
-            font-size: 60px; /* Increased size for prominence */
+            font-size: 60px;
             color: #4285F4;
             font-weight: bold;
             margin-bottom: 20px;
@@ -70,6 +88,12 @@
     </style>
 </head>
 <body>
+    <div id="top-right">
+        <a href="https://mail.google.com" target="_blank">Gmail</a>
+        <a href="https://www.google.com/imghp" target="_blank">Images</a>
+        <img class="icon" src="https://img.icons8.com/external-those-icons-lineal-color-those-icons/50/000000/external-waffle-miscellaneous-those-icons-lineal-color-those-icons.png" alt="Google Apps">
+        <img class="icon" src="https://img.icons8.com/ios-glyphs/30/000000/circled-user.png" alt="Profile Icon">
+    </div>
     <div id="google-logo">Google</div>
     <div id="search-container">
         <input type="text" id="search-bar" placeholder="Search Google">
