--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chrome New Tab Clone</title>
+    <title>New Tab</title>
     <style>
         /* General Reset */
         * {
@@ -120,32 +120,32 @@
     <div id="top-right">
         <a href="https://mail.google.com" target="_blank">Gmail</a>
         <a href="https://www.google.com/imghp" target="_blank">Images</a>
-        <img class="icon" id="apps-icon" src="https://img.icons8.com/external-those-icons-lineal-color-those-icons/50/000000/external-waffle-miscellaneous-those-icons-lineal-color-those-icons.png" alt="Google Apps">
-        <img class="icon" src="https://img.icons8.com/ios-glyphs/30/000000/circled-user.png" alt="Profile Icon">
+        <img class="icon" id="apps-icon" src="https://th.bing.com/th/id/OIP.4okqVxTFZbge2P3ZQYP1zQAAAA?rs=1&pid=ImgDetMain" alt="Google Apps">
+        <img class="icon" src="https://th.bing.com/th/id/OIP.v2btc1HcWm37V1Mt8vkaTgHaHa?rs=1&pid=ImgDetMain" alt="Profile Icon">
         <div id="apps-menu">
             <!-- Google Apps -->
             <a class="app" href="https://drive.google.com" target="_blank">
-                <img src="https://img.icons8.com/color/48/000000/google-drive--v1.png" alt="Drive">
+                <img src="https://th.bing.com/th/id/OIP.7zfMdkSABioHNJpv6oZpjAHaEK?rs=1&pid=ImgDetMain" alt="Drive">
                 Drive
             </a>
             <a class="app" href="https://calendar.google.com" target="_blank">
-                <img src="https://img.icons8.com/color/48/000000/google-calendar--v1.png" alt="Calendar">
+                <img src="https://th.bing.com/th/id/R.d4ea7a71a68a413dee7bd076a9475209?rik=%2bXJWcxfI7nK3%2fA&pid=ImgRaw&r=0" alt="Calendar">
                 Calendar
             </a>
             <a class="app" href="https://keep.google.com" target="_blank">
-                <img src="https://img.icons8.com/color/48/000000/google-keep.png" alt="Keep">
+                <img src="https://th.bing.com/th/id/OIP.DWFtSvxpfNPbt3myhA-3LwHaHa?rs=1&pid=ImgDetMain" alt="Keep">
                 Keep
             </a>
             <a class="app" href="https://photos.google.com" target="_blank">
-                <img src="https://img.icons8.com/color/48/000000/google-photos--v1.png" alt="Photos">
+                <img src="https://th.bing.com/th/id/R.a87482d81dcaf1b805fbf143b45202e8?rik=j4L%2bhdKhtHtbeA&pid=ImgRaw&r=0" alt="Photos">
                 Photos
             </a>
             <a class="app" href="https://meet.google.com" target="_blank">
-                <img src="https://img.icons8.com/fluency/48/000000/google-meet.png" alt="Meet">
+                <img src="https://th.bing.com/th/id/OIP.dz0J6dYofoqPADKrGb8LyAHaHa?rs=1&pid=ImgDetMain" alt="Meet">
                 Meet
             </a>
             <a class="app" href="https://maps.google.com" target="_blank">
-                <img src="https://img.icons8.com/color/48/000000/google-maps-new.png" alt="Maps">
+                <img src="https://th.bing.com/th/id/OIP.TkQbW2rAMuWlO4Wp0AXgSgHaHa?rs=1&pid=ImgDetMain" alt="Maps">
                 Maps
             </a>
         </div>
