--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Tab</title>
+    <link rel="icon" href="https://th.bing.com/th/id/R.23b92bf8b18063c734c6dc7df07cf2f7?rik=zGxaWAcZM%2fXPpw&pid=ImgRaw&r=0"> <!-- Chrome Favicon -->
     <style>
         /* General Reset */
         * {
@@ -39,33 +40,28 @@
             margin-right: 10px;
             cursor: pointer;
         }
-        #apps-menu {
+        #profile-menu {
             position: absolute;
             top: 50px;
             right: 20px;
-            width: 200px;
+            width: 250px;
             background-color: #fff;
             border: 1px solid #ddd;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             display: none;
-            flex-wrap: wrap;
             padding: 10px;
-            gap: 10px;
         }
-        .app {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-decoration: none;
-            font-size: 12px;
+        #profile-menu img {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            margin-bottom: 10px;
+        }
+        #profile-menu p {
+            margin: 5px 0;
+            font-size: 14px;
             color: #333;
-            width: 60px;
-        }
-        .app img {
-            width: 40px;
-            height: 40px;
-            margin-bottom: 5px;
         }
         #google-logo {
             font-size: 60px;
@@ -78,7 +74,7 @@
             width: 60%;
             display: flex;
             align-items: center;
-            margin-bottom: 40px;
+            margin-bottom: 20px;
         }
         #search-bar {
             width: 100%;
@@ -100,6 +96,7 @@
             flex-wrap: wrap;
             justify-content: center;
             gap: 15px;
+            margin-bottom: 20px;
         }
         .shortcut {
             display: flex;
@@ -114,40 +111,30 @@
             height: 60px;
             margin-bottom: 5px;
         }
+        #customize-button {
+            background-color: #4285F4;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 14px;
+        }
+        #customize-button:hover {
+            background-color: #3367D6;
+        }
     </style>
 </head>
 <body>
     <div id="top-right">
         <a href="https://mail.google.com" target="_blank">Gmail</a>
         <a href="https://www.google.com/imghp" target="_blank">Images</a>
-        <img class="icon" id="apps-icon" src="https://th.bing.com/th/id/OIP.4okqVxTFZbge2P3ZQYP1zQAAAA?rs=1&pid=ImgDetMain" alt="Google Apps">
-        <img class="icon" src="https://th.bing.com/th/id/OIP.v2btc1HcWm37V1Mt8vkaTgHaHa?rs=1&pid=ImgDetMain" alt="Profile Icon">
-        <div id="apps-menu">
-            <!-- Google Apps -->
-            <a class="app" href="https://drive.google.com" target="_blank">
-                <img src="https://th.bing.com/th/id/OIP.7zfMdkSABioHNJpv6oZpjAHaEK?rs=1&pid=ImgDetMain" alt="Drive">
-                Drive
-            </a>
-            <a class="app" href="https://calendar.google.com" target="_blank">
-                <img src="https://th.bing.com/th/id/R.d4ea7a71a68a413dee7bd076a9475209?rik=%2bXJWcxfI7nK3%2fA&pid=ImgRaw&r=0" alt="Calendar">
-                Calendar
-            </a>
-            <a class="app" href="https://keep.google.com" target="_blank">
-                <img src="https://th.bing.com/th/id/OIP.DWFtSvxpfNPbt3myhA-3LwHaHa?rs=1&pid=ImgDetMain" alt="Keep">
-                Keep
-            </a>
-            <a class="app" href="https://photos.google.com" target="_blank">
-                <img src="https://th.bing.com/th/id/R.a87482d81dcaf1b805fbf143b45202e8?rik=j4L%2bhdKhtHtbeA&pid=ImgRaw&r=0" alt="Photos">
-                Photos
-            </a>
-            <a class="app" href="https://meet.google.com" target="_blank">
-                <img src="https://th.bing.com/th/id/OIP.dz0J6dYofoqPADKrGb8LyAHaHa?rs=1&pid=ImgDetMain" alt="Meet">
-                Meet
-            </a>
-            <a class="app" href="https://maps.google.com" target="_blank">
-                <img src="https://th.bing.com/th/id/OIP.TkQbW2rAMuWlO4Wp0AXgSgHaHa?rs=1&pid=ImgDetMain" alt="Maps">
-                Maps
-            </a>
+        <img class="icon" id="profile-icon" src="https://th.bing.com/th/id/OIP.v2btc1HcWm37V1Mt8vkaTgHaHa?rs=1&pid=ImgDetMain" alt="Profile Icon">
+        <div id="profile-menu">
+            <img src="https://th.bing.com/th/id/OIP.v2btc1HcWm37V1Mt8vkaTgHaHa?rs=1&pid=ImgDetMain" alt="Profile Image">
+            <p>Hi, Max</p>
+            <p>a.tormen2012@ssdedu.dev</p>
+            <p>Managed By ssdedu.dev</p>
         </div>
     </div>
     <div id="google-logo">Google</div>
@@ -165,10 +152,6 @@
             <img src="https://img.icons8.com/fluency/96/000000/google-meet.png" alt="Google Meet Icon">
             Meet
         </a>
-        <a class="shortcut" href="https://storybook.js.org" target="_blank">
-            <img src="https://img.icons8.com/color/96/000000/storybook.png" alt="Storybook Icon">
-            Storybook
-        </a>
         <a class="shortcut" href="https://discord.com" target="_blank">
             <img src="https://img.icons8.com/color/96/000000/discord-logo.png" alt="Discord Icon">
             Discord
@@ -182,19 +165,34 @@
             React
         </a>
     </div>
+    <button id="customize-button">Customize Chrome</button>
     <script>
-        const appsIcon = document.getElementById('apps-icon');
-        const appsMenu = document.getElementById('apps-menu');
+        const searchBar = document.getElementById('search-bar');
+        const micIcon = document.getElementById('mic-icon');
+        const profileIcon = document.getElementById('profile-icon');
+        const profileMenu = document.getElementById('profile-menu');
 
-        appsIcon.addEventListener('click', () => {
-            // Toggle visibility of the apps menu
-            appsMenu.style.display = appsMenu.style.display === 'flex' ? 'none' : 'flex';
+        // Search functionality
+        searchBar.addEventListener('keypress', function (e) {
+            if (e.key === 'Enter') {
+                window.open(`https://www.google.com/search?q=${searchBar.value}`);
+            }
         });
 
-        // Close menu when clicking outside
-        document.addEventListener('click', (e) => {
-            if (!appsIcon.contains(e.target) && !appsMenu.contains(e.target)) {
-                appsMenu.style.display = 'none';
+        // Mic functionality (mock alert)
+        micIcon.addEventListener('click', function () {
+            alert('Voice search is currently not available.');
+        });
+
+        // Toggle profile menu
+        profileIcon.addEventListener('click', function () {
+            profileMenu.style.display = profileMenu.style.display === 'block' ? 'none' : 'block';
+        });
+
+        // Close profile menu when clicking outside
+        document.addEventListener('click', function (e) {
+            if (!profileIcon.contains(e.target) && !profileMenu.contains(e.target)) {
+                profileMenu.style.display = 'none';
             }
         });
     </script>
